# jobpilot

./: .gitignore  20.04.2026_session_notes.md  A0_codex_ticket.md  CLAUDE.md  CODEX_HANDOFF.md  DATA_CONTRACT.md  Keukenhof_report.md  LICENSE  MEMORY.md  README.md  backlog.md  company_profile_schema.json  conftest.py  pyproject.toml  rubric.json
Reference/: CV tailoring (agent-ready).md  Cover letter (agent-ready).md  EPAM_Rainbow_partnership_deck.pptx  Interview prep (agent-ready).md  NoteGPT_TRANSCRIPT_The Real Problem With AI Agents Nobody's Talking About.txt  Profile prompt (jason+md).md
agents/: A0.md  A1.md  A1_4_liveness.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  _shared.md
agents/a0/: gemini_client.py  research.py  schema_loader.py
config/: profile.yml
docs/: a0.md  daily_report.md  gmail_oauth_setup.md  runner.md  state_store.md
filters/: F1.md  F2.md
jobpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
onboarding/: ONBOARDING.md
orchestrator/: __init__.py  a0.py  agents.py  config.yml  f1.py  f2.py  lanes.py  liveness.py  report.py  runner.py  state_machine.py  store.py
schemas/: pipeline.schema.json  role.schema.json
scripts/: gmail_auth.py  preflight_check.md  preflight_check.py
templates/: daily_report.md.j2
tests/: conftest.py  helpers.py  test_a0.py  test_f1.py  test_f2.py  test_liveness.py  test_preflight_check.py  test_report.py  test_runner.py  test_state_machine.py  test_store.py  test_ui.py
tests/agents/: test_a0_research.py
tests/fixtures/a0/: gemini_response_clean.json  gemini_response_malformed.json  gemini_response_notion_live.json  gemini_response_thin_sources.json
tests/fixtures/f2/: gemini_response_notion_live.json
ui/: __init__.py  app.py
ui/templates/: dashboard.html  intake.html  queue.html  report.html  role_detail.html
